Fix wrong css alignment.

--- a/gui/src/main/java/io/bisq/gui/bisq.css
+++ b/gui/src/main/java/io/bisq/gui/bisq.css
@@ -409,7 +409,7 @@ textfield */
 }
 
 #addressColumn {
-    -fx-alignment: left;
+    -fx-alignment: center-left;
 }
 
 .table-view .column-header .label {
